2008-07-17  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp.hrl: Add XBOSH common prefix.

2008-07-15  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* testsuite/eunit_tty.erl (escape_desc): Characters '_' and '-' are
	kept in filenames.

	* testsuite/xml_parser.erl, testsuite/Makefile.am: Convert XML parser
	test to EUnit.

	* testsuite/check_jid.erl, testsuite/check_xml_parser.erl: Remove
	converted tests.

	* c_src/xmpp_ns.h.in: Remove a namespace used in an example in
	XEP-0072.

	* include/exmpp.hrl: Update namespace macros to include all new
	namespaces from xmpp_ns.h.in.

	* src/server/exmpp_server_compression.erl,
	src/client/exmpp_client_compression.erl: Use the correct namespace
	during features negotiation.

2008-07-11  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* c_src/make-schemas-urls-list, c_src/extract-known-from-schemas,
	c_src/xmpp_ns.h.in-local, c_src/xmpp_names.h.in-local,
	c_src/xmpp_attrs.h.in-local, c_src/Makefile.am, Makefile.am: Add Perl
	scripts to automatically fetch XEP schemas and extract namespaces,
	names and attributes and create the known lists used by
	exmpp_xml_expat.

	* c_src/extract-known-from-schemas: Fix the known namespaces list
	layout.

	* c_src/xmpp_ns.h.in, c_src/xmpp_attrs.h.in, c_src/xmpp_names.h.in:
	Update known lists using the new scripts.

	* c_src/Makefile.am: Distribute the new scripts and local known lists.
	Split the lines containing Vim modelines so that they are not
	interpreted when editing this Makefile.am.

2008-07-09  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_stringprep.erl: Improved exception handling. An
	exception is raised when exmpp isn't started. When a string isn't
	valid, a meaningful exception is raised. Update documentation.

	* src/core/exmpp_jid.erl: Handle exceptions from exmpp_stringprep
	correctly; this was left broken.

	* testsuite/jid.erl: Update testsuite.
